--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "rspeedy preview"
   },
   "dependencies": {
-    "@lynx-js/react": "^0.105.0"
+    "@lynx-js/react": "^0.105.0",
+    "@lynx-js/react-rsbuild-plugin-canary": "^0.9.1-canary-20250309-b21403c1",
+    "react-router": "^7.3.0"
   },
   "devDependencies": {
     "@lynx-js/qrcode-rsbuild-plugin": "^0.3.3",
-    "@lynx-js/react-rsbuild-plugin": "^0.9.0",
+    "@lynx-js/react-rsbuild-plugin": "npm:@lynx-js/react-rsbuild-plugin-canary@^0.9.0",
     "@lynx-js/rspeedy": "^0.8.2",
     "@lynx-js/types": "^3.2.0",
     "@types/react": "^18.3.18",
