--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@lynx-js/react": "^0.105.0",
     "@lynx-js/react-rsbuild-plugin-canary": "^0.9.1-canary-20250309-b21403c1",
-    "react-router": "^7.3.0"
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@lynx-js/qrcode-rsbuild-plugin": "^0.3.3",
